# sensor_monitor

./: AGENTS.md  Cargo.toml  Config.toml  Dockerfile  Makefile  README.md  config.toml  docker-compose.yaml  justfile
release/: env-configmap.yaml  kustomization.yaml  sensor-monitor-deployment.yaml
src/: config.rs  hem.rs  lib.rs  main.rs  measurement_device.rs  mqtt.rs
tests/: minimal_config.toml  test_config.toml
workflows/: docker-publish-tagged.yml
