[package]
name = "sensor_monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
chrono = { version = "0.4.38", features = ["serde"] }
gethostname = "0.5.0"
log = "0.4.22"
reqwest = { version = "0.12.9", features = ["json", "blocking"] }
rumqttc = "0.24.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
simple_logger = "5.0.0"
structopt = { version = "0.3.26", features = ["color"] }
