[package]
name = "sensor_monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
chrono = { version = "0.4.39", features = ["serde"] }
gethostname = "0.5.0"
metrics = "0.24.1"
metrics-exporter-prometheus = "0.16.0"
reqwest = { version = "0.12.9", features = ["json", "blocking"] }
rumqttc = "0.24.0"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
structopt = { version = "0.3.26", features = ["color"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["json"] }
